implemented greedy parameters